@@ -6167,7 +6167,7 @@ PACKAGE: 2.2.99.2
  * Previous commit: Changed userid to use user dataset rather than
     document.
 
-2007-01-08
+2007-01-08 tdb
  * Added ApacheLog import plugin for access log data
 
 2007-01-09 cjg 
@@ -6176,3 +6176,8 @@ PACKAGE: 2.2.99.2
  * Added $current_lang to available data in eprint script.
  * Moved exec'ing of SystemSetting binaries into Platform so that they
     can use custom code on non-UNIX platforms.
+
+2007-01-10 tdb
+ * Made ApacheLog optional on Date::Parse dependency
+ * Made commonlog regexp in ApacheLog more flexible
+
